--- a/client/src/app/components/navbars/navbar/navbar.component.html
+++ b/client/src/app/components/navbars/navbar/navbar.component.html
@@ -2,9 +2,9 @@
   <div class="container mx-auto">
     <ul>
       <li>
-        <a routerLink="/">
-          <h1 class="font-bold">Math Vault</h1>
-        </a>
+        <h1 class="font-bold">
+          <a routerLink="/" class="py-2 px-3">Math Vault</a>
+        </h1>
       </li>
     </ul>
   </div>
