--- a/client/src/app/features/home/home-courses-table/home-courses-table.component.html
+++ b/client/src/app/features/home/home-courses-table/home-courses-table.component.html
@@ -37,7 +37,7 @@
             {{ course.name }}
           </th>
           <td class="px-6 py-4">
-            {{ formatTopicsToString(course.topics) }}
+            {{ formatTagsToString(course.tags) }}
           </td>
           <td class="px-6 py-4">{{ formatDate(course.createdAt) }}</td>
         </tr>
