setup more ui stuff

--- a/client/src/app/core/components/navbar/navbar.component.html
+++ b/client/src/app/core/components/navbar/navbar.component.html
@@ -1,5 +1,10 @@
 <nav class="py-5">
-  <div class="container max-w-5xl mx-auto">
+  <div class="container max-w-5xl mx-auto flex items-center gap-3">
     <app-logo />
+    <ul class="flex items-center gap-3 ml-auto">
+      <li>
+        <a [routerLink]="'/'">Home</a>
+      </li>
+    </ul>
   </div>
 </nav>
