--- a/client/src/app/features/home/home-courses-table/home-courses-table.component.html
+++ b/client/src/app/features/home/home-courses-table/home-courses-table.component.html
@@ -12,7 +12,7 @@
       >
         <tr>
           <th scope="col" class="px-6 py-3">Course Name</th>
-          <th scope="col" class="px-6 py-3">Topics</th>
+          <th scope="col" class="px-6 py-3">Tags</th>
           <th scope="col" class="px-6 py-3">Created At</th>
         </tr>
       </thead>
