--- a/client/src/app/features/course/course-info/course-info.component.html
+++ b/client/src/app/features/course/course-info/course-info.component.html
@@ -8,10 +8,10 @@
     <li>
       <a
         appButton
-        variant="default"
+        variant="default3D"
         size="default"
         [routerLink]="['/course', course.name, '/study']"
-        class="w-22"
+        class="w-26"
         >Study</a
       >
     </li>
