finish button and setup course stuff

--- a/client/src/app/features/course/course-info/course-info.component.html
+++ b/client/src/app/features/course/course-info/course-info.component.html
@@ -10,7 +10,7 @@
         appButton
         variant="default3D"
         size="default"
-        [routerLink]="['/course', course.name, '/study']"
+        [routerLink]="['/course', course.name, 'study']"
         class="w-26"
         >Study</a
       >
